# Safe-RL-Backdoor-Attacks

./: .gitignore  NLP_Roberta.ipynb  SafeRL_Benchmark_Train.ipynb  exp1.py  main.py  pyproject.toml
AgentPush/: SafeRL_Benchmark_Train.ipynb  SafeRL_Benchmark_Train_with_Attacks.ipynb
PointGoal/: SafeRL_Benchmark_Train.ipynb  SafeRL_Benchmark_Train_with_Attacks.ipynb  attacks.py  episode_runner.py  wrapper.py
PointGoal/ppo_safety_logs/: monitor.csv
ppo_safety_logs_with_attacks/: monitor.csv
